added font fallack and additional comments where required

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -1,3 +1,14 @@
+<!-- The ordering of About the Park Page is designed according to each division's importance 
+        1)the Navigation Bar at top, similar to all pages
+        2)the Map is the main attraction which points to the rides and restaurants
+        3)Pictures and short description is added on each ride and restaurants 
+        4.)A table with timings has been added which tells user the specific time each restaurant and ride is open 
+        5)Footer
+       Main contributors of this page : John & Abish
+       Reviewers /additional contributors of this page: Can & Pradhyumnaa 
+    -->
+
+
 <!DOCTYPE html>
 <html lang=“en”>
 <head>
@@ -26,7 +37,7 @@
 
 <!-- Map links code. Using area class to map circles and href to link to appropriate section of the pages and alt to allow for better
     accessibility and img tages to include an image of the park layout
-This section was completed by team member Abish and Jonathan -->
+ -->
     <div id = "InfinityImageMap">
         <img src="Media/img/About-the-park-park.png" alt="Infinity Park Map" width= "1440" height= "516" usemap="#InfinityParkMap" id= i-aip-map-image>
         <map name="InfinityParkMap">
@@ -45,7 +56,7 @@ This section was completed by team member Abish and Jonathan -->
     <!--  
         Ironman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
         is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-        Completed By Abish and Jonathan   -->
+         -->
     <div class = "grid-container-aip">
         <div class =RideIronMan>
                 <a id="Ironman"></a>
@@ -76,7 +87,7 @@ This section was completed by team member Abish and Jonathan -->
             <!--  
             Hulk ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
             is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-            Completed By Abish and Jonathan   -->
+              -->
         </div>
 
         <div class = RideHulk>
@@ -108,7 +119,7 @@ This section was completed by team member Abish and Jonathan -->
             <!--  
             Spiderman ride Div class. Img tags to include picture of ride, paragraph tag to include description. br tag to add a break so that it
             is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-            Completed by Abish and Jonathan  -->
+             -->
         </div>
 
         <div class = RideSpiderman>
@@ -140,7 +151,7 @@ This section was completed by team member Abish and Jonathan -->
             <!--  
             Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
             is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-            Completed by Abish and Jonathan  -->
+             -->
         </div>
 
         <div class = MexicanRestaurantShop>
@@ -172,7 +183,7 @@ This section was completed by team member Abish and Jonathan -->
             <!--  
             Restaurant Div class. Img tags to include picture, paragraph tag to include description. br tag to add a break so that it
             is more easily read and bold tags to highlight the important text and a table list to show opening and closing times
-            Completed By Abish and Jonathan   -->
+              -->
         </div>
 
         <div class = ItalianRestaurantShop>
