Comments fixed with respect to commas and capitalization

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -5,7 +5,7 @@
         4.)A table with timings has been added which tells user the specific time each restaurant and ride is open 
         5)Footer
        Main contributors of this page : John & Abish
-       Reviewers /additional contributors of this page: Can & Pradhyumnaa 
+       Reviewers/Additional contributors of this page: Can & Pradhyumnaa 
     -->
 
 
