--- a/Things-to-do.html
+++ b/Things-to-do.html
@@ -4,7 +4,7 @@
         3)Three most important Things this park offers is Rides,Shows and Safari .Picture and a short description is provided for the audience  on each aspect 
         4)Footer
     Main contributors of this page : Can and Pradhyumnaa 
-    Reviewers /additional contributors of this page: Jon and Abish
+    Reviewers/Additional contributors of this page: Jon and Abish
 
 -->
 
