Comments on About the park and CSS,Hovering in About the Park

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -1,3 +1,5 @@
+<!--About the park page, displays a map of ride and restaurant locations in the park and details of said attractions.
+Main contributors are; Abish and Jonathan. -->
 <!DOCTYPE html>
 <html lang=“en”>
 <head>
@@ -118,7 +120,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "RideSpidermanDescription">
-                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
+                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!<br> Swings from webs.</p>
             </div>
 
             <div class = "RideSpidermanImage">
@@ -154,7 +156,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "MexicanRestaurantImage">
-                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
+                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-mex-image>
             </div>
 
             <div class = "MexicanRestaurantOpeningTimes">
@@ -186,7 +188,7 @@ This section was completed by team member Abish and Jonathan -->
             </div>
 
             <div class = "ItalianRestaurantShopImage">
-                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
+                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-ita-image>
             </div>
         
             <div class = "ItalianRestaurantShopOpeningTimes">
