Corrected issues with merge

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -5,7 +5,7 @@
         4.)A table with timings has been added which tells user the specific time each restaurant and ride is open 
         5)Footer
        Main contributors of this page : John & Abish
-       Reviewers/Additional contributors of this page: Can & Pradhyumnaa 
+       Reviewers /additional contributors of this page: Can & Pradhyumnaa 
     -->
 
 
@@ -23,7 +23,9 @@
     <div class="about-the-park-body-wrap">
             
     <div class="about-the-park-body-content">   
-    <!--Nav Bar HTML Code. Using Unordered List Tags for the Links to other pages. Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
+    <!--Nav Bar HTML Code. 
+        Using Unordered List Tags for the Links to other pages. 
+        Button Tags for 2 buttons present in the navigation bar of the website, which is the Sign In/ Sign Up and Buy Tickets Button.-->
     <navbar class = "navbar">
         <li class = "nav-item-logo"><a href="index.html" ><img src="Media/img/logo.jpg" width = " 150" height = "50" ></a></li>
         <li class = "nav-item-page-link"> <a href="Things-to-do.html" class="navlinks">Things to Do</a></li>
@@ -129,7 +131,7 @@
             </div>
 
             <div class = "RideSpidermanDescription">
-                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!<br> Swings from webs.</p>
+                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
             </div>
 
             <div class = "RideSpidermanImage">
@@ -165,7 +167,7 @@
             </div>
 
             <div class = "MexicanRestaurantImage">
-                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-mex-image>
+                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
             </div>
 
             <div class = "MexicanRestaurantOpeningTimes">
@@ -197,7 +199,7 @@
             </div>
 
             <div class = "ItalianRestaurantShopImage">
-                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-ita-image>
+                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
             </div>
         
             <div class = "ItalianRestaurantShopOpeningTimes">
@@ -263,8 +265,7 @@
         </div>
     </div>
 </footer>
-        </div>
-        </div>
+</div>
 </body>
 
 </html>
