About the park box hover with hover css added to stylesheet and comments

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -167,7 +167,7 @@
             </div>
 
             <div class = "MexicanRestaurantImage">
-                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
+                <img src="Media/img/About-the-park-Restaurant-mexican.webp" alt="Mexican Restaurant Logo" width= "450" height= "350" id= i-aip-mex-image>
             </div>
 
             <div class = "MexicanRestaurantOpeningTimes">
@@ -199,7 +199,7 @@
             </div>
 
             <div class = "ItalianRestaurantShopImage">
-                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-map-image>
+                <img src="Media/img/About-the-park-Restaurant-italian.webp" alt="Italian Restaurant Logo" width= "450" height= "350" id= i-aip-ita-image>
             </div>
         
             <div class = "ItalianRestaurantShopOpeningTimes">
