--- a/About-the-park.html
+++ b/About-the-park.html
@@ -38,7 +38,7 @@
 
 
 <!-- Map links code. Using area class to map circles and href to link to appropriate section of the pages and alt to allow for better
-    accessibility and img tages to include an image of the park layout
+    accessibility and img tags to include an image of the park layout
  -->
     <div id = "InfinityImageMap">
         <img src="Media/img/About-the-park-park.png" alt="Infinity Park Map" width= "1440" height= "516" usemap="#InfinityParkMap" id= i-aip-map-image>
@@ -218,7 +218,9 @@
         </div>
     </div>
 </div>
-<!--Footer HTML Code. Using Divs to separate contents into logical structures which belong together. Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. These buttons will be added via FontAwesome using the commented out script in the head.-->
+<!--Footer HTML Code. Using Div to separate contents into logical structures which belong together. 
+    Sitemap Div for Web Page links, Contact Us Div for Contact Links such as Phone and Email and Social Media Links for the Social Media Buttons. 
+    These buttons will be added via FontAwesome using the commented out script in the head.-->
 <footer class="footer-distributed">
 
     <div class="footer-left">
