About the park page formatting cleanup adding one <br> to bring the spiderman image in line

--- a/About-the-park.html
+++ b/About-the-park.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class = "RideSpidermanDescription">
-                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!</p>
+                <p><b>Join Spiderman on an epic ride!</b><br> Spiderman! Spiderman! Does whatever a Spider Can!<br>Swings on webs</p>
             </div>
 
             <div class = "RideSpidermanImage">
