Index Safety Image changed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          <div id="mainbutton">
             <div class = "i-top-right">
                 <figure> 
-                   <a href="https://google.com"><img id = "i-safety-image" src="Media/img/Index-safety.png" alt="Health&Safety Picture" width= "400" height= "400"></a>
+                   <a href="https://google.com"><img id = "i-safety-image" src="Media/img/Indexsafety.png" alt="Health&Safety Picture" width= "400" height= "400"></a>
                 </figure> 
                 <div class="health-text">
                     <h2>Read about Health &amp Safety </h2>
